@@ -21,8 +21,10 @@ package org.apache.solr.core;
 import java.io.IOException;
 import java.nio.ByteBuffer;
 import java.util.ArrayList;
+import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -97,6 +99,16 @@ public class PluginBag<T> implements AutoCloseable {
       ((RequestHandlerBase) inst).setPluginInfo(info);
     }
 
+  }
+
+  /**
+   * Check if any of the mentioned names are missing. If yes, return the Set of missing names
+   */
+  public Set<String> checkContains(Collection<String> names) {
+    if (names == null || names.isEmpty()) return Collections.EMPTY_SET;
+    HashSet<String> result = new HashSet<>();
+    for (String s : names) if (!this.registry.containsKey(s)) result.add(s);
+    return result;
   }
 
   PluginHolder<T> createPlugin(PluginInfo info) {
